# The-Forgotten-Client

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build-ubuntu.yml  build-windows.yml
cmake/: FindOpenGLES2.cmake
src/: CMakeLists.txt  connection.cpp  const.h  defines.h  engine.cpp  game.cpp  map.cpp  map.h  rsa.cpp  rsa.h  screenText.h  softwareDrawning.cpp  spriteManager.cpp  surfaceDirect3D11.cpp  surfaceDirect3D11.h  surfaceDirect3D9.h  surfaceOpengl.h  surfaceOpenglCore.h  surfaceOpengles.h  surfaceOpengles2.h  util.cpp
src/GUI/: ProtocolOptions.cpp
src/lzma/: LzmaEnc.c
